# qsym2

./: .gitignore  .gitlab-ci.yml  .neoconf.json  .nvim.lua  Cargo.toml  README.md  katex.html  log4rs.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/about/: authors.md  authorship.md  development.md  license.md
docs/docs/getting-started/: basic-usage.md  installation.md  prerequisites.md
docs/docs/javascripts/: katex.js
docs/docs/methodologies/: character-table-generation.md  external-fields.md  magnetic-corepresentations.md  orbit-based-representation-analysis.md  projective-reps-coreps.md
docs/docs/python/: basis.md  common.md  index.md  integral-evaluation.md  integrals.md  molecule-symmetrisation.md  symmetry-group-detection.md
docs/docs/stylesheets/: card.css  complex_card.css  elements.css  qsym2-dark.css  qsym2-light.css
docs/docs/tutorials/: adamantane.md  benzene.md  bf3.md
docs/docs/user-guide/: integral-evaluation.md  integral-evaluations.md  molecule-symmetrisation.md  symmetry-group-detection.md
proptest-regressions/angmom/: spinor_rotation_3d_tests.txt
qsym2/: __init__.py  qsym2.pyi
src/: .main.rs.swp  aux.rs  lib.rs  main.rs  rotsym.rs
src/analysis/: mod.rs
src/angmom/: mod.rs  sh_conversion.rs  sh_conversion_tests.rs  sh_rotation_3d.rs  sh_rotation_3d_tests.rs  shconversion.rs  shconversion_tests.rs  shrotation_3d.rs  shrotation_3d_tests.rs  spinor_rotation_3d.rs  spinor_rotation_3d_tests.rs
src/aux/: ao_basis.rs  ao_basis_tests.rs  atom.rs  contributors.rs  format.rs  geometry.rs  geometry_tests.rs  misc.rs  mod.rs  molecule.rs  molecule_tests.rs  molecule_transform_tests.rs  ndarray_shuffle.rs  sea_tests.rs  template_molecules.rs
src/auxiliary/: ao_basis.rs  ao_basis_tests.rs  atom.rs  contributors.rs  geometry.rs  geometry_tests.rs  misc.rs  mod.rs  molecule.rs  molecule_tests.rs  sea_tests.rs  template_molecules.rs
src/basis/: ao.rs  ao_integrals.rs  ao_integrals_tests.rs  ao_tests.rs  mod.rs
src/bindings/: mod.rs
src/bindings/python/: integrals.rs  mod.rs  molecule_symmetrisation.rs  representation_analysis.rs  symmetry_group_detection.rs
src/chartab/: character.rs  character_tests.rs  chartab_group.rs  chartab_symbols.rs  mod.rs  modular_linalg.rs  modular_linalg_tests.rs  reducedint.rs  reducedint_tests.rs  symmetry_symbols.rs  symmetry_symbols_tests.rs  unityroot.rs  unityroot_tests.rs
src/drivers/: mod.rs  molecule_symmetrisation.rs  molecule_symmetrisation_tests.rs  point_group_detection.rs  point_group_detection_tests.rs  symmetry_group_detection.rs  symmetry_group_detection_tests.rs
src/drivers/molecule_sprucing/: mod.rs  molecule_sprucing_tests.rs
src/drivers/molecule_symmetrisation/: mod.rs  molecule_symmetrisation_tests.rs
src/drivers/molecule_symmetrisation_bootstrap/: mod.rs  molecule_symmetrisation_bootstrap_tests.rs  molecule_symmetrisation_tests.rs
src/drivers/molecule_symmetrisation_by_distance_matrix/: mod.rs  molecule_symmetrisation_tests.rs
src/drivers/projection/: density.rs  density_tests.rs  mod.rs  slater_determinant.rs  slater_determinant_tests.rs
src/drivers/representation_analysis/: angular_function.rs  density.rs  density_tests.rs  mod.rs  multideterminant.rs  multideterminant_tests.rs  slater_determinant.rs  slater_determinant_tests.rs  vibrational_coordinate.rs  vibrational_coordinate_tests.rs
src/drivers/symmetry_group_detection/: mod.rs  symmetry_group_detection_tests.rs
src/group/: chartab_construction_tests.rs  class.rs  construct_chartab.rs  group_tests.rs  irrep_chartab_construction_tests.rs  magnetic_chartab_construction_tests.rs  mod.rs  nonuniform_magnetic_chartab_construction_tests.rs  symmetry_group.rs
src/group/class/: mod.rs
src/integrals/: mod.rs  overlap.rs  shell_tuple.rs  shell_tuple_collection_tests.rs  shell_tuple_tests.rs
src/interfaces/: mod.rs
src/interfaces/binaries/: binaries_tests.rs  mod.rs
src/interfaces/cli/: mod.rs
src/interfaces/custom/: mod.rs
src/io/: format.rs  mod.rs  numeric.rs  numeric_tests.rs
src/permutation/: mod.rs  permutation_group.rs  permutation_group_tests.rs  permutation_symbols.rs  permutation_tests.rs
src/projection/: mod.rs
src/rotsym/: calc.rs  mod.rs  rotsym_tests.rs
src/sandbox/: mod.rs
src/symmetry/: chartab_construction_tests.rs  mod.rs  nonuniform_magnetic_chartab_construction_tests.rs  point_group_detection_tests.rs  symmetry_chartab.rs  symmetry_chartab_nonuniform_b_tests.rs  symmetry_chartab_reduction_tests.rs  symmetry_chartab_tests.rs  symmetry_core.rs  symmetry_core_tests.rs  symmetry_element.rs  symmetry_element_order.rs  symmetry_element_tests.rs  symmetry_elements_tests.rs  symmetry_group.rs  symmetry_group_tests.rs  symmetry_operation.rs  symmetry_operation_tests.rs  symmetry_symbols.rs  symmetry_symbols_tests.rs
src/transformation/: mod.rs  transformation_tests.rs
tests/: h3.xyz  h8.xyz  integration_test.rs  th.xyz
tests/binaries/: nine_f64  sixteen_c128
tests/input/: test_input.yml  test_input_bao.yml  test_input_bao_spinor.yml  test_input_symmetry_group_detection_fromfile.yml  test_input_symmetry_group_detection_parameters.yml
tests/noci_backend_hdf5/: ch4p_sto3g.hdf5  h3_631gs.hdf5  h3_sto3g.hdf5  h4_631gds.hdf5  h4_sto3g.hdf5  h6_sto3g.hdf5
tests/qchem/: benzene_631gstar.qarchive.h5  c60_631gdp.qarchive.h5.REMOVED.git-id  geomopt.qarchive.h5  o2_ms0.qarchive.h5  o3p.qarchive.h5  vf63m.qarchive.h5  vf63m_sym.qarchive.h5
tests/xyz/: 8cpp.xyz  8cpp_imperfect.xyz  adamantane.xyz  allene.xyz  au26.xyz  azulene.xyz  b2cl4.xyz  b2h6.xyz  b7.xyz  benzene.xyz  benzene_imperfect.xyz  bf3.xyz  bf3_offcentre.xyz  butan-1-ol.xyz  c165.xyz  c2h2.xyz  c2h2_imperfect.xyz  c2h6.xyz  c5h5.xyz  c5ph5.xyz  c60.xyz  c6o6.xyz  c6ph6.xyz  ch4.xyz  cis-cocl2h4o2.xyz  coronane65.xyz  cp10_flat.xyz  cpnico.xyz  cr.xyz  cr2.xyz  cuneane.xyz  cyclobutene.xyz  cyclohexane_chair.xyz  cyclohexene.xyz  dibromodimethylcyclohexane.xyz  eclipsed_ferrocene.xyz  f-pyrrole.xyz  f2allene.xyz  fclbenzene.xyz  h100.xyz  (+47 more)
utils/: qsym2-orca.py
web/: mkdocs.yml
web/docs/: index.md
(+191 files in other folders)
