[package]
name = "qsym2"
version = "0.9.0"
edition = "2021"
authors = ["Bang C. Huynh <bang.cong.huynh@gmail.com>"]
description = "A program for Quantum Symbolic Symmetry"
repository = "https://gitlab.com/bangconghuynh/qsym2"
license = "LGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.71"
approx = "0.5.1"
bincode = "1.3.3"
bitvec = "1.0.1"
byteorder = "1.4.3"
clap = { version = "4.3.10", features = ["cargo", "derive"] }
counter = "0.5.7"
derive_builder = "0.20.0"
divisors = "0.2.1"
duplicate = "1.0.0"
factorial = "0.4.0"
fraction = { version = "0.15.1", features = ["with-serde-support"] }
hdf5 = { version = "0.8.1", optional = true }
hdf5-sys = {version = "0.8.1", features = ["static"], optional = true }
numeric-sort = "0.1.0"
itertools = "0.12.1"
indexmap = { version = "2.0.0", features = ["rayon", "serde"] }
lazy_static = "1.4.0"
log = "0.4.19"
log4rs = { version = "1.2.0", features = ["file_appender", "pattern_encoder"] }
nalgebra = { version = "0.32.2", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["rayon", "serde"] }
ndarray_einsum_beta = "0.7.0"
ndarray-linalg = { version = "0.16", default-features = false }
num = "0.4.0"
num-complex = "0.4.3"
num-modular = "0.6.1"
num-ord = "0.1.0"
num-traits = "0.2.15"
numpy = { version = "0.21.0", optional = true }
ordered-float = "4.2.0"
periodic_table = "0.5.0"
phf = { version = "0.11.2", features = ["macros"] }
proptest = "1.2.0"
primes = "0.3.0"
pyo3 = { version = "0.21.2", features = ["extension-module", "num-complex", "hashbrown"], optional = true }
pyo3-log = { version = "0.10.0", optional = true }
rand = "0.8.5"
rayon = "1.7.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking", "json"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
serial_test = "3.0.0"
cargo-upgrades = "2.0.0"

[dev-dependencies]
env_logger = "0.11.3"

[features]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
python = ["dep:numpy", "dep:pyo3", "dep:pyo3-log"]
integrals = ["dep:reqwest"]
qchem = ["dep:hdf5", "dep:hdf5-sys"]
sandbox = []

standard = ["openblas-static", "qchem"]
full = ["standard", "integrals"]

[package.metadata.docs.rs]
rustdoc-args = [
  "--html-in-header",
  ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[lib]
crate-type = ["cdylib", "lib"]
