[package]
name = "qsym2"
version = "0.9.2"
edition = "2021"
authors = ["Bang C. Huynh <bang.cong.huynh@gmail.com>"]
description = "A program for Quantum Symbolic Symmetry"
repository = "https://gitlab.com/bangconghuynh/qsym2"
license = "LGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
approx = "0.5"
bincode = "1.3"
bitvec = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["cargo", "derive"] }
counter = "0.6"
derive_builder = "0.20"
divisors = "0.2"
duplicate = "2.0"
factorial = "0.4"
fraction = { version = "0.15", features = ["with-serde-support"] }
hdf5 = { version = "0.8", git = "https://github.com/tzachar/hdf5-rust", branch = "bump-ndarray", optional = true }
# hdf5-sys = { version = "0.8", features = ["static"], optional = true }
numeric-sort = "0.1"
itertools = "0.14"
indexmap = { version = "2.7", features = ["rayon", "serde"] }
lazy_static = "1.5"
log = "0.4"
log4rs = { version = "1.3", features = ["file_appender", "pattern_encoder"] }
nalgebra = { version = "0.33", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray_einsum_beta = { git = "https://github.com/bangconghuynh/einsum" }
ndarray-linalg = { version = "0.17", default-features = false }
num = "0.4"
num-complex = "0.4"
num-modular = "0.6"
num-ord = "0.1"
num-traits = "0.2"
numpy = { version = "0.24", optional = true }
ordered-float = "4.6"
periodic_table = "0.5"
phf = { version = "0.11", features = ["macros"] }
proptest = "1.6"
primes = "0.4"
pyo3 = { version = "0.24", features = ["extension-module", "num-complex", "hashbrown"], optional = true }
pyo3-log = { version = "0.12", optional = true }
rand = "0.9"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serial_test = "3.2"
cargo-upgrades = "2.1"

[dev-dependencies]
env_logger = "0.11"

[features]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
python = ["dep:numpy", "dep:pyo3", "dep:pyo3-log"]
integrals = ["dep:reqwest"]
qchem = ["dep:hdf5", "dep:hdf5"]
sandbox = []

standard = ["openblas-static", "qchem"]
full = ["standard", "integrals"]

[package.metadata.docs.rs]
rustdoc-args = [
  "--html-in-header",
  ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
