[package]
name = "qsym2"
version = "0.11.0"
edition = "2024"
authors = ["Bang C. Huynh <bang.cong.huynh@gmail.com>"]
description = "A program for Quantum Symbolic Symmetry"
repository = "https://gitlab.com/bangconghuynh/qsym2"
license = "LGPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
approx = "0.5"
bincode = { version = "2.0", features = ["serde"] }
bitvec = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["cargo", "derive"] }
counter = "0.6"
derive_builder = "0.20"
divisors = "0.2"
duplicate = "2.0"
factorial = "0.4"
fraction = { version = "0.15", features = ["with-serde-support"] }
hdf5 = { package = "hdf5-metno", version = "0.10" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10", features = ["static"] }
numeric-sort = "0.1"
itertools = "0.14"
indexmap = { version = "2.10", features = ["rayon", "serde"] }
lazy_static = "1.5"
log = "0.4"
log4rs = { version = "1.3", features = ["file_appender", "pattern_encoder"] }
nalgebra = { version = "0.34", features = ["serde-serialize"] }
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-einsum = "0.8.0"
# ndarray-linalg = { version = "0.17", default-features = false }
ndarray-linalg = { git = "https://github.com/rust-ndarray/ndarray-linalg", branch = "master", default-features = false }
num = "0.4"
num-complex = "0.4"
num-modular = "0.6"
num-ord = "0.1"
num-traits = "0.2"
numpy = { version = "0.25", optional = true }
ordered-float = "5.0"
periodic_table = "0.5"
phf = { version = "0.12", features = ["macros"] }
proptest = "1.7"
primes = "0.4"
pyo3 = { version = "0.25", features = ["extension-module", "indexmap", "num-complex", "hashbrown", "py-clone"], optional = true }
pyo3-log = { version = "0.12", optional = true }
rand = "0.9"
rayon = "1.10"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serial_test = "3.2"
cargo-upgrades = "2.2"

[dev-dependencies]
env_logger = "0.11"

[features]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
python = ["dep:numpy", "dep:pyo3", "dep:pyo3-log"]
integrals = ["dep:reqwest"]
qchem = []
sandbox = []

standard = ["openblas-static", "qchem"]
full = ["standard", "integrals"]

[package.metadata.docs.rs]
rustdoc-args = [
  "--html-in-header",
  ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
